--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <title>Example</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
